# TaskTrackerCLI

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml
src/task_cli/: cli.py  database.py  model.py  repository.py  task_cli.py  utils.py  validator.py
tests/: test_database.py  test_task.py  test_task_repository.py
