[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
version = "0.0.1"
authors = [
  { name="Karolis Strazdas", email="karolis.strazdas@protonmail.com" },
]
description = "A simple CLI tool for managing TODOs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Eoic/TaskTrackerCLI"
Issues = "https://github.com/Eoic/TaskTrackerCLI/issues"

[project.scripts]
task-cli = "task_cli.task_cli:main"
